# broken-world

./: Broken World.cbp  Broken World.depend  Broken World.layout  CMakeLists.txt  GameMap.h  README.md  main.cpp  prelude_scene.cpp  prelude_scene.h  sdl_renderer.hpp  sdl_surface.hpp  sdl_window.hpp
include/: draw_tools.h  game_map.h  game_settings.h  main_menu.h  texture_library.h  time_center.h  virtual_drawer.h  war.h
include/SDLPP/: sdl_error.h  sdl_renderer.h  sdl_surface.h  sdl_texture.h  sdl_timer.h  sdl_window.h
src/: main.cpp  main_menu.cpp  texture_library.cpp  war.cpp
